correct horizontal paddings on header (no edge bleed), footer (fix wacky non-centering)

--- a/source/stylesheets/site.css.scss
+++ b/source/stylesheets/site.css.scss
@@ -92,9 +92,8 @@ body {
   box-shadow: 0 1px 2em rgba(0,0,0,0.8);
   color: #EEE;
   margin: 0 0;
-  padding: 2em 0 5em;
+  padding: 2em 10px 5em;
   position: relative;
-  width: 100%;
 
   #logo {
     position: absolute;
@@ -123,7 +122,7 @@ body {
   box-shadow: 0 -1px 2em rgba(0,0,0,0.8);
   color: #EEE;
   margin: 0;
-  padding: 2em 8em;
+  padding: 2em 10px;
 
   ul#nav {
     list-style: none;
